[gd_scene load_steps=2 format=3 uid="uid://btbg452ehv3cs"]

[ext_resource type="Script" uid="uid://clkoipawy6nts" path="res://Menu/main_menu.gd" id="1_sla5p"]

[node name="Main" type="Node"]

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sla5p")

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="UserName" type="LineEdit" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Username"

[node name="Spacer" type="Control" parent="MainMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 4

[node name="HostBtn" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Spacer2" type="Control" parent="MainMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 4

[node name="IPLine" type="LineEdit" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(2.64719e-07, 0, 0.227704, 1)
theme_override_font_sizes/font_size = 24
text = "localhost"
placeholder_text = "Enter IP Address Here"

[node name="JoinBtn" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Spacer3" type="Control" parent="MainMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 4

[node name="StatusLabel" type="Label" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = -11.5
offset_right = 24.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Status"
